add RestController && MentorshipControllerTest revision5, fix tests naming, conflicts resolve